# ground-robot-navigation

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/robot_bringup/lib/robot_bringup/: send_goal.py  waypoint_navigator.py
install/robot_bringup/share/ament_index/resource_index/package_run_dependencies/: robot_bringup
install/robot_bringup/share/ament_index/resource_index/parent_prefix_path/: robot_bringup
install/robot_bringup/share/robot_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/robot_bringup/share/robot_bringup/cmake/: robot_bringupConfig-version.cmake  robot_bringupConfig.cmake
install/robot_bringup/share/robot_bringup/environment/: ament_prefix_path.dsv  path.dsv
install/robot_bringup/share/robot_bringup/launch/: nav_bringup.launch.py  slam_bringup.launch.py
install/robot_description/share/ament_index/resource_index/package_run_dependencies/: robot_description
install/robot_description/share/ament_index/resource_index/parent_prefix_path/: robot_description
install/robot_description/share/robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/robot_description/share/robot_description/cmake/: robot_descriptionConfig-version.cmake  robot_descriptionConfig.cmake
install/robot_description/share/robot_description/config/: gz_bridge.yaml  robot.rviz  slam.rviz
install/robot_description/share/robot_description/environment/: ament_prefix_path.dsv  path.dsv
install/robot_description/share/robot_description/launch/: robot_gazebo.launch.py
install/robot_description/share/robot_description/urdf/: robot.xacro
install/robot_navigation/share/ament_index/resource_index/package_run_dependencies/: robot_navigation
install/robot_navigation/share/ament_index/resource_index/parent_prefix_path/: robot_navigation
install/robot_navigation/share/robot_navigation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/robot_navigation/share/robot_navigation/cmake/: robot_navigationConfig-version.cmake  robot_navigationConfig.cmake
install/robot_navigation/share/robot_navigation/config/: nav2_params.yaml  slam_toolbox_params.yaml
install/robot_navigation/share/robot_navigation/environment/: ament_prefix_path.dsv  path.dsv
install/robot_navigation/share/robot_navigation/launch/: navigation_launch.py  slam_launch.py
install/robot_navigation/share/robot_navigation/maps/: house_map.pgm  house_map.yaml
log/: latest_build
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/launch/: nav_bringup.launch.py  slam_bringup.launch.py
src/robot_bringup/scripts/: send_goal.py  waypoint_navigator.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/config/: gz_bridge.yaml  robot.rviz  robot_view.rviz  slam.rviz
src/robot_description/launch/: display.launch.py  gazebo_spawn.launch.py  robot_gazebo.launch.py  sim.launch.py
src/robot_description/urdf/: gazebo_plugins.xacro  materials.xacro  robot.urdf.xacro  robot.xacro
src/robot_description/worlds/: mar_world.sdf
src/robot_navigation/: CMakeLists.txt  package.xml
src/robot_navigation/config/: nav2_params.yaml  slam_toolbox_params.yaml
src/robot_navigation/config/costmaps/: global_costmap.yaml  local_costmap.yaml
src/robot_navigation/config/localization/: amcl.yaml  map_server.yaml  slam_toolbox_mapping.yaml
src/robot_navigation/config/nav2/: nav2_params.yaml
src/robot_navigation/config/slam/: slam_toolbox.yaml
src/robot_navigation/launch/: bringup_navigation.launch.py  localization.launch.py  navigation.launch.py  navigation_launch.py  slam.launch.py  slam_launch.py  slam_mapping.launch.py
src/robot_navigation/maps/: README.md  house_map.pgm  house_map.yaml
src/robot_navigation/scripts/: send_goal.py
worlds/: house.sdf  office.sdf
